fixed color and alignment

--- a/homework/starpdx/style.css
+++ b/homework/starpdx/style.css
@@ -17,10 +17,11 @@ body{
     background-color: rgb(9, 10, 10);
 }
 footer{
+  color: #fff;
   padding-top: 50px;
 }
 #navbar{
-    
+  background-color: #fff;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -31,7 +32,7 @@ footer{
 }
 #navbar ul {
      
- 
+ color: rgb(9, 10, 10);
     display: flex;
     list-style-type: none;
     margin: auto;
@@ -64,7 +65,8 @@ width: 100%;
  
   li a {
     display: block;
-    color: #fff;
+    
+    color: rgb(9, 10, 10);
     font-family:gotham;
     font-size: 28px;
     text-align: center;
@@ -100,6 +102,7 @@ width: 100%;
     font-family: gotham, Arial, Helvetica, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
     font-size: 24px;   
     margin: 10px auto;
+    color: #fff;
  }
  button:hover{
     border: solid black;
@@ -114,6 +117,7 @@ width: 100%;
   justify-content: center;
   text-align: center;
   position: relative;
+  color: #fff;
   }
 .home{
   background-image: url(images/showcase1.png);
@@ -275,16 +279,7 @@ text-align: center;
       flex-direction: column; /* Change to column layout */
     }
     
-    .description-item2{
-        
-        font-family: gothamlight, Arial, Helvetica, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
-        font-size: 24px;
-        width: 100vw;
-        position: relative;
-        align-items: center;
-    justify-content: center;
-    height: fit-content;
-      }
+    
     .banner{
         display: flex;
         width: 100vw;
@@ -301,7 +296,19 @@ text-align: center;
     font-size:68px ;
   }
   .description-item h2{
-    font-size: 24px;
+    font-size: 28px;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+  .description-item2 p{
+    
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
   }
   
   .description-item1{
@@ -350,10 +357,9 @@ width: 100%;
     
            
             display: flex;
-            
             justify-content: center;
             align-items: center;
-            margin: auto;
+        
           }
           
           .socials a:hover{
